--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://20andback.co/'
 languageCode = 'en-us'
 title = '20 and back'
 theme = 'ananke'
